--- a/templates/category/company_form.html
+++ b/templates/category/company_form.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load crispy_forms_tags %}
+{% block headers %}
+<title>{% trans "you are about to send application for" %}</title>
+{% endblock headers %}
 
 
 
@@ -10,7 +14,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-12 col-md-12 col-sm-12">
             {% if user.is_authenticated and user.is_company %}
-            <h1><b>{{ user.username }}</b>- you are about to send application for <i style="color:black">{{ subcat.name }}</i></h1>
+            <h1><b>{{ user.username }}</b>- {% trans "you are about to send application for" %} <i style="color:black">{{ subcat.name }}</i></h1>
                 <br>
                 <form class="profile-company" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
@@ -29,7 +33,7 @@
                     </div>
                 </form>
             {% elif user.is_authenticated and user.is_worker %}
-                <h2>You have to be register as Company to take offer for {{ subcat.name }}.</h2>
+                <h2>{% trans "You have to be register as Company to take offer for" %} {{ subcat.name }}.</h2>
             {% else %}
                 404
             {% endif %}
