--- a/templates/category/cv_list.html
+++ b/templates/category/cv_list.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
-
-
+{% load i18n %}
+{% block headers %}
+<title>{% trans ""}
+{% endblock  headers %}
+<title>{% trans "This is CV's you apply to us. Pleace keep you personal information up to date."}</title>
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
         <br>
-        <h1>{{ user.username }}- This is CV's you apply to us. Pleace keep you personal information up to date. </h1>
+        <h1>{{ user.username }}- {% trans "This is CV's you apply to us. Pleace keep you personal information up to date." %} </h1>
             {% for c in cv %}
             <div class="card">
                 <div class="card-header">
-                    Date you apply- {{ c.submit_date }}
+                    {% trans "Date you apply- {{ c.submit_date }}" %}
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">{{ c.job }} - Position you apply</h5>
-                    <a href="{% url 'cv_detail' c.id %}" class="btn btn-success">Preview</a>
-                    <a href="{% url 'edit_cv' c.id %}" class="btn btn-success">Update</a>
+                    <h5 class="card-title">{% trans "{{ c.job }} - Position you apply" %}</h5>
+                    <a href="{% url 'cv_detail' c.id %}" class="btn btn-success">{% trans "Preview" %}</a>>
+                    <a href="{% url 'edit_cv' c.id %}" class="btn btn-success">{% trans "Update" %}</a>
                 </div>
             </div>
             <br>
