--- a/templates/costumeuser/company_signup.html
+++ b/templates/costumeuser/company_signup.html
@@ -18,7 +18,7 @@
                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                     {% endif %}
                     <br>
-                    <button class="btn btn-primary type="submit">{% trans "Sign Up" %} &raquo;</button>
+                    <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
                 </form>
             </div>
         </div>
