--- a/templates/faq/faq_detail.html
+++ b/templates/faq/faq_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block headers %}
 <title>{{ object.question | safe }}</title>
 {% endblock headers %}
@@ -10,6 +11,7 @@
                 <h1 >{{ object.question | safe }}</h1>
                 <p style="color: white" id="summernote">{{ object.answer | safe }}</p>
                 <br>
+                <a href="{% url 'faq' %}" class="btn btn-success">{% trans "All questions" %}</a>
             </div>
         </div>
     </div>
