--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,32 +10,44 @@
   <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'category' 1 %}">Job-Positions</a>
+        <a class="nav-link" href="{% url 'category' 1 %}">{% trans "Job-Positions" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'news' %}">News</a>
+        <a class="nav-link" href="{% url 'news' %}">{% trans "News" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
+        <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+        <a class="nav-link" href="{% url 'contact' %}">{% trans "Contact" %}</a>
       </li>
     </ul>
+    <!-- Languages choises -->
+    <ul class="navbar-nav">
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for lang in languages %}
+          <li class="nav-item">
+            <a class="dropdown-item nav-link" href="/{{ lang.code }}/">{{ lang.name_local }}</a>
+          </li>
+        {% endfor %}
+    </ul>
+    <!-- Authentication -->
     <ul class="navbar-nav">
       {% if user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+        <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Logout" %}</a>
       </li>
       {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
+        <a class="nav-link" href="{% url 'account_login' %}">{% trans "Login In" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+        <a class="nav-link" href="{% url 'account_signup' %}">{% trans "Register" %}</a>
       </li>
       {% endif %}
     </ul>
