--- a/templates/costumeuser/worker_signup.html
+++ b/templates/costumeuser/worker_signup.html
@@ -13,12 +13,11 @@
 
                     <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-                    <form class="form-inline" id="worker_signup_form" method="post" action="{% url 'worker_signup_view' %}">
+                    <form class="signup" id="signup_form" method="post" action="{% url 'worker_signup_view' %}">
                         {% csrf_token %}
-                        <div class="form-group mb-2">
                             {{ form|crispy }}
                             {% if redirect_field_value %}
-                                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                             {% endif %}
                             <br>
                             <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
