--- a/templates/category/category_list.html
+++ b/templates/category/category_list.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load static %}
+{% block headers %}
+<title>{% trans "Job-Positions" %}</title>
+{% endblock headers %}
 
 {% block content %}
 <br>
 <br>
 <div class="container">
     <h1 style="color: white; text-align: center">{% trans "All niches and job positions we work with." %}</h1>
-    <p>{% trans "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." %}</p>
+    <p>{% trans "Category info text" %}</p>
     {% for cat in category %}
         <div class="btn-group">
             <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' cat.id %}"><h2><span class="badge" style="color:#6E0D25">{{ cat.name }}</span></h2></a>
