--- a/templates/category/company_form.html
+++ b/templates/category/company_form.html
@@ -14,7 +14,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-12 col-md-12 col-sm-12">
             {% if user.is_authenticated and user.is_company %}
-            <h1><b>{{ user.username }}</b>- {% trans "you are about to send application for" %} <i style="color:black">{{ subcat.name }}</i></h1>
+            <h1><b>{{ user.username }}</b>- {% trans "you are about to send application for:" %} <i style="color:black">{{ subcat.name }}</i></h1>
                 <br>
                 <form class="profile-company" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
@@ -22,7 +22,6 @@
                         <div class="card h-100">
                             <div class="card-body">
                                 {{ form|crispy }}
-                                {% comment %} {{ form.start_date|as_crispy_field }} {% endcomment %}
                                 <br>
                                 <div class="button-wrapper submit">
                                     <input class="btn btn-success" type="submit" value="Request price" />
