--- a/templates/category/cv_form.html
+++ b/templates/category/cv_form.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load i18n %}
+{% block headers %}
+<title>{% trans "Create Cv" %}</title>
+
+{% endblock headers %}
 
 
 
@@ -8,8 +13,8 @@
     <div class="row justify-content-center">
         <div class="col-lg-12 col-md-12 col-sm-12">
                 {% if user.is_authenticated and user.is_worker %}
-                    <h1><b>{{ user.username }}</b>- you are about to apply for <i>{{ subcat.name }}</i></h1>
-                    <p><b>Create your Cv.</b></p>
+                    <h1><b>{{ user.username }}</b>-{% trans "you are about to apply Cv for:" %} <i>{{ subcat.name }}</i></h1>
+                    <p><b>{% trans "Create Cv" %}</b></p>
                     <form class="profile-company" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
                             <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -17,7 +22,7 @@
                                     <div class="card h-100">
                                         
                                         <div class="card-body">
-                                            <h2 class="card-title"><span class="badge bg-secondary">Info</span></h2>
+                                            <h2 class="card-title"><span class="badge bg-secondary">{% trans " Personal Information" %}</span></h2>
                                             {{ form.birth_day|as_crispy_field }}
                                             {{ form.gender|as_crispy_field }}
                                             {{ form.driving_license|as_crispy_field }}
@@ -32,7 +37,7 @@
                                 <div class="col">
                                     <div class="card h-100">
                                         <div class="card-body">
-                                            <h2 class="card-title"><span class="badge bg-secondary">Languages</span></h2>
+                                            <h2 class="card-title"><span class="badge bg-secondary">{% trans "Languages" %}</span></h2>
                                             {{ form.first_lang|as_crispy_field }}
                                             {{ form.first_lang_level|as_crispy_field }}
                                             {{ form.second_lang|as_crispy_field }}
@@ -45,7 +50,7 @@
                                 <div class="col">
                                     <div class="card h-100">
                                         <div class="card-body">
-                                            <h2 class="card-title"><span class="badge bg-secondary">Last employers</span></h2>
+                                            <h2 class="card-title"><span class="badge bg-secondary">{% trans "Last employers" %}</span></h2>
                                             {{ form.country_1|as_crispy_field }}
                                             {{ form.company_name_1|as_crispy_field }}
                                             {{ form.position_1|as_crispy_field }}
@@ -57,7 +62,7 @@
                                 <div class="col">
                                     <div class="card h-100">
                                         <div class="card-body">
-                                            <h2 class="card-title"><span class="badge bg-secondary">Second employers</span></h2>
+                                            <h2 class="card-title"><span class="badge bg-secondary">{% trans "Second employers" %}</span></h2>
                                             {{ form.country_2|as_crispy_field }}
                                             {{ form.company_name_2|as_crispy_field }}
                                             {{ form.position_2|as_crispy_field }}
@@ -69,7 +74,7 @@
                                 <div class="col">
                                     <div class="card h-100">
                                         <div class="card-body">
-                                            <h2 class="card-title"><span class="badge bg-secondary">Third employers</span></h2>
+                                            <h2 class="card-title"><span class="badge bg-secondary">{% trans "Third employers" %}</span></h2>
                                             {{ form.country_3|as_crispy_field }}
                                             {{ form.company_name_3|as_crispy_field }}
                                             {{ form.position_3|as_crispy_field }}
@@ -86,7 +91,7 @@
                             <br>
                     </form>
                 {% elif user.is_authenticated and user.is_company %}
-                    <h2>You have to be register as Worker to register your CV for {{ subcat.name }}. You are register as Company!</h2>
+                    <h2>{% trans "You have to be register as Worker to register your CV for:" %} {{ subcat.name }}.</h2>
                 {% else %}
                     404
                 {% endif %}
