--- a/templates/category/order_list.html
+++ b/templates/category/order_list.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% load i18n %}
+{% block headers %}
+<title>{% trans "This is yours applications for employee." %}</title>
+
+{%endblock headers %}
 
 
 {% block content %}
@@ -6,16 +11,16 @@
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
         <br>
-        <h1>{{ user.username }} - This is yours applications for employee.</h1>
+        <h1>{{ user.username }} - {% trans "This is yours applications for employee." %}</h1>
             {% for c in order %}
             <div class="card">
                 <div class="card-header">
-                    Date you apply or edit your order- {{ c.submit_date }}
+                    <p>{% trans "Date you apply or edit your order-" %} {{ c.submit_date }}</p>
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">{{ c.job_titlle }} - Position you requested</h5>
-                    <a href="{% url 'order_detail' c.id %}" class="btn btn-success">Preview</a>
-                    <a href="{% url 'order_edit' c.id %}" class="btn btn-success">Update</a>
+                    <h5 class="card-title">{{ c.job_titlle }} - {% trans "Position you requested" %}</h5>
+                    <a href="{% url 'order_detail' c.id %}" class="btn btn-success">{% trans "Preview" %}</a>
+                    <a href="{% url 'order_edit' c.id %}" class="btn btn-success">{% trans "Edit" %}</a>
                 </div>
             </div>
             <br>
