--- a/templates/category/worker_cvs.html
+++ b/templates/category/worker_cvs.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <h1>{% trans "All applyed CV's for" %}{{ subcat }}</h1>
+            <h1>{% trans "All applyed CV's for" %}-{{ subcat }}</h1>
             <br>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 {% for c in cv %}
