--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <footer class="bg-light text-dark text-center text-lg-start">
   <!-- Grid container -->
   <div class="container p-4">
@@ -5,38 +6,41 @@
     <div class="row">
       <!--Grid column-->
       <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Contacts</h5>
+        <h5 class="text-uppercase">{% trans "Contacts Footer" %}</h5>
 
-        <p>My adress</p>
-        <p>My phone number</p>
-        <p>Мобилен: +359 892 999 092</p>
+        <p>{% trans "My adress footer" %}</p>
+        <p>{% trans "My phone number footer" %}</p>
+        <p>{% trans "Мобилен: +359 892 999 092 footer" %}</p>
       </div>
       <!--Grid column-->
 
       <!--Grid column-->
       <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Адрес</h5>
+        <h5 class="text-uppercase">{% trans "Address Map footer" %}</h5>
           <p>MAP</p>
       </div>
       <!--Grid column-->
 
       <!--Grid column-->
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-        <h5 class="text-uppercase mb-0">Pages</h5>
+        <h5 class="text-uppercase mb-0">{% trans "Pages footer" %}</h5>
 
         <ul class="list-unstyled">
           <br />
           <li>
-            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">Home</a>
+            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'home' %}" class="text-dark">{% trans "Home" %}</a>
           </li><br />
           <li>
-            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">Category</a>
+            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' 1 %}" class="text-dark">{% trans "Job-Positions" %}</a>
           </li><br />
           <li>
-            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">News</a>
+            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">{% trans "News" %}</a>
           </li><br />
           <li>
-            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">FAQ</a>
+            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">{% trans "FAQ" %}</a>
+          </li><br />
+          <li>
+            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'contact' %}" class="text-dark">{% trans "Contact" %}</a>
           </li>
         </ul>
       </div>
