--- a/templates/category/category_list.html
+++ b/templates/category/category_list.html
@@ -13,7 +13,7 @@
     <p>{% trans "Category info text" %}</p>
     {% for cat in category %}
         <div class="btn-group">
-            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' cat.id %}"><h2><span class="badge" style="color:#6E0D25">{{ cat.name }}</span></h2></a>
+            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' cat.id %}"><h2><span class="badge bg-light text-dark">{{ cat.name }}</span></h2></a>
         </div>
     {% endfor %}
     <div class="card-group">
