--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,13 +10,16 @@
   <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'category' 1 %}">{% trans "Job-Positions" %}</a>
+        <a class="nav-link" href="{% url 'category_all' %}">{% trans "Job-Positions" %}</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'news' %}">{% trans "News" %}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
+        <a class="nav-link" href="{% url 'partners' %}">{% trans "Partners" %}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'contact' %}">{% trans "Contact" %}</a>
