--- a/templates/category/worker_cvs.html
+++ b/templates/category/worker_cvs.html
@@ -20,7 +20,7 @@
 
                             <div class="card h-100"style="text-align:center;">
                                 <div class="card-image">
-                                    <img style="width:150px; height:auto;" src="/media/default.jpeg">
+                                    <img style="width:150px; height:auto;" src="/media/cv.jpg">
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">{{ c.worker.last_name }}</h5>
