--- a/templates/costumeuser/company_signup.html
+++ b/templates/costumeuser/company_signup.html
@@ -13,7 +13,9 @@
                 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
                 <form class="signup" id="signup_form" method="post" action="{% url 'company_signup_view' %}">
                     {% csrf_token %}
+                    {% block trans %}
                     {{ form|crispy }}
+                    {% endblock trans %}
                     {% if redirect_field_value %}
                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                     {% endif %}
