--- a/templates/faq/faq_list.html
+++ b/templates/faq/faq_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="header">
-        <h1>{% trans "Friquently Asked Questions" %}</h1>
+        <h1 style="color: white; text-align: center">{% trans "Friquently Asked Questions" %}</h1>
     </div>
     <br>
     <div class="container">
