--- a/templates/footer.html
+++ b/templates/footer.html
@@ -31,7 +31,10 @@
             <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'home' %}" class="text-dark">{% trans "Home" %}</a>
           </li><br />
           <li>
-            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' 1 %}" class="text-dark">{% trans "Job-Positions" %}</a>
+            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category_all' %}" class="text-dark">{% trans "Job-Positions" %}</a>
+          </li><br />
+          <li>
+            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'partners' %}" class="text-dark">{% trans "Partners" %}</a>
           </li><br />
           <li>
             <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">{% trans "News" %}</a>
