--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -9,7 +9,7 @@
 <br>
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-lg-6">
+    <div class="col-lg-8 col-md-12 col-sm-12">
     <br>
       <div class="card text-center">
         <h1>{% trans "Sign Up" %}</h1>
