--- a/templates/faq/faq_detail.html
+++ b/templates/faq/faq_detail.html
@@ -8,7 +8,9 @@
     <div class="container" style="align: center;">
         <div class="row align-items-center">
             <div class="col-lg-12 col-sm-12 col-md-12">
-                <h1 >{{ object.question | safe }}</h1>
+            <br>
+            <br>
+                <h1 style="color: white; text-align: center">{{ object.question | safe }}</h1>
                 <p style="color: white" id="summernote">{{ object.answer | safe }}</p>
                 <br>
                 <a href="{% url 'faq' %}" class="btn btn-success">{% trans "All questions" %}</a>
